--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,7 +1,28 @@
 ---
-- name: Install basic packages
-  yum:
+- name: Set timezone to Asia/Tokyo
+  community.general.timezone:
+    name: Asia/Tokyo
+
+- name: Confirm system locale
+  ansible.builtin.command: localectl status
+  register: localectl_result
+  check_mode: false
+  changed_when: false
+
+- name: Set system locale to ja_JP.utf8
+  ansible.builtin.command: localectl set-locale LANG=ja_JP.utf8
+  when: "'LANG=ja_JP.utf8' not in localectl_result.stdout"
+
+- name: set LANG=ja_JP.UTF-8 in /etc/sysconfig/i18n
+  lineinfile:
+    dest: /etc/sysconfig/i18n
+    regexp: "^LANG="
+    line: "LANG=ja_JP.UTF-8"
+
+- name: Install packages
+  ansible.builtin.dnf:
     name:
+      - python3-pip
       - git
       - unzip
       - gcc
