--- a/roles/react/tasks/main.yml
+++ b/roles/react/tasks/main.yml
@@ -1,9 +1,10 @@
 ---
 - name: Clone React repository
   git:
-    repo: 'git@github.com:abettie/multibook-frontend.git'
+    repo: 'git@bitbucket.org:abettie/multibook-frontend.git'
     dest: /var/www/frontend
     version: master
+    key_file: /home/ec2-user/.ssh/id_rsa
     accept_hostkey: yes
 
 - name: Install npm dependencies
