--- a/roles/laravel/tasks/main.yml
+++ b/roles/laravel/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Clone Laravel repository
   ansible.builtin.git:
-    repo: 'git@bitbucket.org:abettie/multibook-backend.git'
+    repo: 'git@github.com:abettie/multibook-backend.git'
     dest: /var/www/api
     version: master
     key_file: /home/ec2-user/.ssh/id_rsa
